GetWaitingUser bff oeprations
